--- a/R/00_all.qmd
+++ b/R/00_all.qmd
@@ -56,6 +56,8 @@ options(knitr.duplicate.label = "allow")
 render(input = "04_describe.qmd", output_dir = here("results/"))
 ```
 
+
+{{< include 05_analysis_PCA_fromscratch.qmd >}}
 ```{r 05_render, message=FALSE, running=FALSE}
 #| echo: false
 #| include: false
@@ -65,8 +67,8 @@ render(input = "04_describe.qmd", output_dir = here("results/"))
 
 # Uncomment these: options... and render... when the pca is finally ready.
 
-#options(knitr.duplicate.label = "allow")
-#render(input = "05_analysis_pca.qmd", output_dir = here("results/"))
+options(knitr.duplicate.label = "allow")
+render(input = "05_analysis_pca.qmd", output_dir = here("results/"))
 ```
 
 {{< include 06_analysis_volcano.qmd >}}
