--- a/doc/presentation.qmd
+++ b/doc/presentation.qmd
@@ -27,7 +27,9 @@ Methods Explain how/why we did log transformation, normalization, how we dealt w
 
 ## PCA
 
-Results
+```{r}
+print(biplot)
+```
 
 ## Volcano Plot
 
