--- a/R/00_all.qmd
+++ b/R/00_all.qmd
@@ -56,18 +56,14 @@ options(knitr.duplicate.label = "allow")
 render(input = "04_describe.qmd", output_dir = here("results/"))
 ```
 
-\#{{< include 05_analysis_pca.qmd >}}
+#{{< include 05_analysis_pca.qmd >}}
 
 ```{r 05_render, message=FALSE, running=FALSE}
 #| echo: false
 #| include: false
 
-
-#{{< include 05_analysis_pca.qmd >}}
-
-#options(knitr.duplicate.label = "allow")
-#render(input = "05_analysis_pca.qmd", output_dir = here("results/"))
-
+options(knitr.duplicate.label = "allow")
+render(input = "05_analysis_pca.qmd", output_dir = here("results/"))
 ```
 
 {{< include 06_analysis_volcano.qmd >}}
